--- a/net-mail/exim/ChangeLog
+++ b/net-mail/exim/ChangeLog
@@ -1,7 +1,14 @@
 # ChangeLog for net-mail/exim
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-mail/exim/ChangeLog,v 1.3 2002/04/15 23:58:06 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/exim/ChangeLog,v 1.4 2002/04/19 02:21:34 rphillips Exp $
 
+*exim-3.36-r1 (18 Apr 2002)
+
+  18 Apr 2002; Ryan Phillips <rphillips@gentoo.org>
+  exim-3.36-r1.ebuild files/digest-exim-3.36-r1 :
+
+  Updated due to security exploit in exim-3.34
+  
 *exim-3.34-r2 (15 Apr 2002)
 
   15 Apr 2002; Seemant Kulleen <seemant@gentoo.org>
