--- a/net-ftp/lukemftp/ChangeLog
+++ b/net-ftp/lukemftp/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-ftp/lukemftp
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-ftp/lukemftp/ChangeLog,v 1.2 2002/05/04 03:42:50 woodchip Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-ftp/lukemftp/ChangeLog,v 1.3 2002/05/22 21:19:33 woodchip Exp $
+
+*lukemftp-1.5-r4 (22 May 2002)
+
+  22 May 2002; Donny Davies <woodchip@gentoo.org> :
+
+  Security fix for PASV overflow.
 
 *lukemftp-1.5-r3 (3 May 2002)
   
