--- a/net-analyzer/ethereal/ChangeLog
+++ b/net-analyzer/ethereal/ChangeLog
@@ -1,8 +1,15 @@
 # ChangeLog for net-analyzer/ethereal
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ethereal/ChangeLog,v 1.6 2002/06/21 00:34:56 sunflare Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/ethereal/ChangeLog,v 1.7 2002/06/29 03:43:50 blocke Exp $
 
-#ethereal-0.9.4 (20 Jun 2002)
+*ethereal-0.9.5 (28 Jun 2002)
+
+  28 Jun 2002; Bruce A. Locke <blocke@shivan.org> ethereal-0.9.5.ebuild:
+
+  Bumped the version to 0.9.5 and removed older versions.  Older versions
+  had a buffer overflow in various modules and should no longer be used.
+
+*ethereal-0.9.4 (20 Jun 2002)
 
   20 May 2002; Phil Bordelon <sunflare@gentoo.org> ethereal-0.9.4.ebuild :
 
@@ -32,12 +39,3 @@
 
   Update to the latest version, closing bug 1439
 
-*ethereal-0.9.0 (1 Feb 2002)
-
-  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
-  
-  Added initial ChangeLog which should be updated whenever the package is
-  updated in any way. This changelog is targetted to users. This means that the
-  comments should well explained and written in clean English. The details about
-  writing correct changelogs are explained in the skel.ChangeLog file which you
-  can find in the root directory of the portage repository.
