--- a/sci-biology/mira/ChangeLog
+++ b/sci-biology/mira/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sci-biology/mira
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/mira/ChangeLog,v 1.18 2012/07/08 18:01:08 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/mira/ChangeLog,v 1.19 2012/11/07 22:10:54 jlec Exp $
+
+*mira-3.2.1-r1 (07 Nov 2012)
+
+  07 Nov 2012; Justin Lecher <jlec@gentoo.org> mira-3.2.1.ebuild,
+  +mira-3.2.1-r1.ebuild, +files/mira-3.2.1-boost-1.50.patch:
+  Fix for boost >1.50, #425468
 
   08 Jul 2012; Justin Lecher <jlec@gentoo.org> -mira-3.0.5.ebuild,
   -mira-3.2.0.ebuild:
