--- a/sci-biology/mira/ChangeLog
+++ b/sci-biology/mira/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sci-biology/mira
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/mira/ChangeLog,v 1.19 2012/11/07 22:10:54 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/mira/ChangeLog,v 1.20 2012/11/07 22:29:55 jlec Exp $
+
+*mira-3.4.0.2 (07 Nov 2012)
+
+  07 Nov 2012; Justin Lecher <jlec@gentoo.org> mira-3.2.1.ebuild,
+  mira-3.2.1-r1.ebuild, +mira-3.4.0.2.ebuild,
+  +files/mira-3.4.0.2-boost-1.50.patch:
+  Version Bump, #377807
 
 *mira-3.2.1-r1 (07 Nov 2012)
 
