--- a/mail-mta/exim/ChangeLog
+++ b/mail-mta/exim/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for mail-mta/exim
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/exim/ChangeLog,v 1.240 2012/11/11 16:31:22 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/exim/ChangeLog,v 1.241 2012/11/11 18:46:52 grobian Exp $
+
+  11 Nov 2012; Fabian Groffen <grobian@gentoo.org> -exim-4.76-r1.ebuild,
+  -exim-4.76.ebuild, -exim-4.77.ebuild, -exim-4.80.ebuild,
+  -files/exim-4.75-makefile-freebsd.patch, -files/exim-4.76-as-needed.patch,
+  -files/exim.rc6:
+  Drop vulnerable versions, bug #439734
 
   11 Nov 2012; Raúl Porcel <armin76@gentoo.org> exim-4.80.1.ebuild:
   ia64/sparc stable wrt #439734
